# Home-Lab-Containers

./: .gitignore  .gitmodules  .mega-linter.yaml  .yamllint.yaml  CHANGELOG.md  README.md  ReadMe.md
.github/: dependabot.yaml
.github/workflows/: Static Analysis.yml  mega_linter.yaml
HPNas/: .env  README.md  ReadMe.md  docker-compose.sh  docker-compose.yml
HPNas/Misc/: .env  docker-compose.yml
HPNas/Networking/: .env  README.md  ReadMe.md  docker-compose.yml  nginx.conf
PC/: README.md  ReadMe.md
PiDesk/: .env  README.md  ReadMe.md  docker-compose-cups.yml  docker-compose.local.yml  docker-compose.sh  docker-compose.yml  nginx.conf
PiHall/: README.md  docker-compose.yml  fstab  nginx.conf
PiHome/: .env  README.md  ReadMe.md  docker-compose.sh  docker-compose.yml
PiHome/IOT/RP2040-Async-Sensor/: .gitignore  COMPARISON.md  Cargo.toml  README.md
PiHome/IOT/RP2040-Async-Sensor/examples/: async_tests.rs
PiHome/IOT/RP2040-Async-Sensor/src/: main.rs
PiHomeNetworking/: README.md  docker-compose.yml  nginx.conf
PiLab/: .env  README.md  ReadMe.md  docker-compose.sh  docker-compose.yml  nginx.conf
PiWeb/: ReadMe.md  docker-compose.sh
PrusaPrint/: .env  Cargo.toml  README.md  ReadMe.md  __init__.py  docker-compose.sh  docker-compose.yml  getDHTTemp.py  libcamera.conf  plugin_list.json  setupOctoprint.sh
PrusaPrint/Networking/: .env  README.md  docker-compose.yml  nginx.conf
PrusaPrint/src/: lib.rs  main.rs  test_dht11.rs
PrusaPrint/tests/: integration_test.rs
docs/: Diagrams.drawio
utils/: README.md  ReadMe.md  docker-compose.yml
(+41 files in other folders)
